k8s-rewrite/charts/media-stack/qbit-monitor/service.yaml
# qBit-Monitor Service
apiVersion: v1
kind: Service
metadata:
  name: qbit-monitor
  namespace: plex
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: qbit-monitor
