k8s-rewrite/charts/media-stack/qbit-monitor/ingress.yaml
# qBit-Monitor Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-monitor-ingress
  namespace: plex
spec:
  rules:
    - host: qbit-monitor.branconet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbit-monitor
                port:
                  number: 80
